--- a/aboutme.html
+++ b/aboutme.html
@@ -51,9 +51,9 @@
   </head>
    <body>
      <div style="
-                 width:600px;
-                 height:600px;
-                 background-color:grey;
+                 width:1000px;
+                 height:500px;
+                 background-color:B78EC8;
                  margin:0 px;
                  padding:0 px;">
            
