--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     
-  <title> About Me: Niki Shakouri</title>
+  <title> About Me: Nik Shakouri</title>
      <div class="topnav" id="myTopnav">       
  
   <a>Home</a>
