--- a/aboutme.html
+++ b/aboutme.html
@@ -68,9 +68,9 @@
   </head>
    <body>
      <div style="
-                 width:600 px;
-                 height:600 px;
-                 background-color:#B78EC8;">
+                 width:800 px;
+                 height:800 px;
+                 background-color:#9C6DAF;">
            
     <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Biography</h1></b>
   
