--- a/aboutme.html
+++ b/aboutme.html
@@ -70,7 +70,7 @@
      <div style="
                  width:800 px;
                  height:800 px;
-                 background-color:#9C6DAF;">
+                 background-color:#C493D8;">
            
     <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Biography</h1></b>
   
