--- a/aboutme.html
+++ b/aboutme.html
@@ -70,7 +70,7 @@
      <div style="
                  width:700 px;
                  height:550 px;
-                 background-color:#AF9CFC;">
+                 background-color:#9D96BC;">
            
     <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Biography</h1></b>
   
