--- a/aboutme.html
+++ b/aboutme.html
@@ -12,12 +12,12 @@
        <center>
         <script>
           function ScrollA() {
-            window.scrollTo (0,850);
+            window.scrollTo (0,860);
           }
         </script>
       <script>
         function ScrollWin() {
-          window.scrollTo (0, 1350);
+          window.scrollTo (0, 1360);
         }
               </script>
        <script>
@@ -87,7 +87,10 @@
     </pre>
         </div>  
        
-    
+    <div style="
+                 width:700 px;
+                 height:800 px;
+                 background-color:#B890CB;">
     <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Projects</h1></b>
      <tr>
       <center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:white;width:350px;height:200px;"></center>
@@ -101,6 +104,7 @@
      <p style="color:white;font-family:ariel;font-size:150%;text-align:center;">
          Through the use of arduino and a basic knowledge of circuits, my team and I were able to complete a circuit that controlled LED lights, causing them to simultaneously turn on.</p>
      </tr>
+     </div>
      <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Contact Me</h1></b>
        <pre><p><center><a href="https://www.linkedin.com/in/niki-shakouri-5b7871141/" style="color:white;font-family:ariel;font-size:150%;">LinkedIn Profile</a></center>
       <center><a style="color:white;font-family:ariel;font-size:150%;">Email: nshakouri@yahoo.com</center></p>
