--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
         </script>
       <script>
         function ScrollWin() {
-          window.scrollTo (0, 1360);
+          window.scrollTo (0, 1380);
         }
               </script>
        <script>
@@ -90,7 +90,7 @@
     <div style="
                  width:700 px;
                  height:800 px;
-                 background-color:#B890CB;">
+                 background-color:#B5AED1;">
     <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Projects</h1></b>
      <tr>
       <center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:white;width:350px;height:200px;"></center>
