--- a/aboutme.html
+++ b/aboutme.html
@@ -90,8 +90,8 @@
     <div style="
                  width:700 px;
                  height:800 px;
-                 background-color:#B5AED1;">
-      <br>
+                 background-color:#C0BBD4;">
+      
     <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Projects</h1></b>
      <tr>
       <center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:white;width:350px;height:200px;"></center>
