--- a/aboutme.html
+++ b/aboutme.html
@@ -107,9 +107,14 @@
      </tr>
       <br>
      </div>
+      <div style="
+                 width:700 px;
+                 height:550 px;
+                 background-color:#D9D3F0;">
      <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Contact Me</h1></b>
        <pre><p><center><a href="https://www.linkedin.com/in/niki-shakouri-5b7871141/" style="color:white;font-family:ariel;font-size:150%;">LinkedIn Profile</a></center>
       <center><a style="color:white;font-family:ariel;font-size:150%;">Email: nshakouri@yahoo.com</center></p>
     </pre>
+        </div>
   </body>
 </html>
