--- a/aboutme.html
+++ b/aboutme.html
@@ -62,6 +62,8 @@
          webkit-background-size: cover;
          -moz-background-size: cover;
          -o-background-size; cover;
+         margin:0;
+         padding:0;
        }
   </div>
         </style>
