--- a/aboutme.html
+++ b/aboutme.html
@@ -79,7 +79,7 @@
   
       
      
-    <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:160px;height:140px;"> </center>
+    <center> <img src="NikiShakouri.jpg" alt="girl" style="width:160px;height:140px;"> </center>
     <pre><p style="color:white;font-family:ariel;font-size:150%;text-align:center;">
            I am an upcoming senior at Independence High School. 
        Likes: I enjoy running, traveling to different places, binge watching shows, and shopping.
