--- a/aboutme.html
+++ b/aboutme.html
@@ -79,8 +79,8 @@
   
       
      
-    <center> <img src="NikiShakouri.jpg" alt="girl" style="width:250px;height:160px;"> </center>
-    <pre><p style="color:white;font-family:ariel;font-size:150%;text-align:center;">
+    <img src="NikiShakouri.jpg" alt="girl" style="width:250px;height:160px; align= "left"> 
+    <pre><p style="color:white;font-family:ariel;font-size:150%;text-align:right;">
            I am an upcoming senior at Independence High School. 
        Likes: I enjoy running, traveling to different places, binge watching shows, and shopping.
                        Dislikes: I dislike animals.
